[package]
name = "proto_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
env_logger = "0.10.0"
chrono = "0.4.31"
hyper = { version = "0.14.27", features = ["full"] }
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
url-escape = "0.1.1"
http = "0.2.9"
futures-util = "0.3.28"
once_cell = "1.18.0"
const_format = "0.2.32"
serde_json = "1.0.107"
derivative = "2.2.0"
sha256 = "1.4.0"
sqlite = "0.32.0"
rand = "0.8.5"
reqwest = "0.11.22"
optfield = "0.3.0"
impl_new = "0.2.1"
mysql = "24.0.0"
zip = "0.6.6"

[dependencies.uuid]
version = "1.5.0"
features = ["v4","serde"]
